# ant2api-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  WEBUI_PARITY_MATRIX.md  docker-compose.yaml  start.sh
data/: model_id_mapping.json
src/: config.rs  error.rs  logging.rs  main.rs  memory.rs  runtime_config.rs
src/credential/: mod.rs  oauth.rs  refresh_task.rs  store.rs  types.rs
src/gateway/: mod.rs
src/gateway/claude/: convert.rs  handler.rs  mod.rs  response.rs  stream.rs  types.rs
src/gateway/common/: auth_retry.rs  extract.rs  mod.rs  retry.rs
src/gateway/manager/: handler.rs  mod.rs  quota.rs  templates.rs
src/gateway/openai/: convert.rs  handler.rs  mod.rs  stream.rs  types.rs
src/quota_pool/: manager.rs  mod.rs  refresher.rs  selector.rs  types.rs
src/signature/: cache.rs  manager.rs  mod.rs  store.rs  types.rs
src/util/: id.rs  mod.rs  model.rs
src/vertex/: client.rs  mod.rs  sanitize.rs  stream.rs  types.rs
templates/: base.html  dashboard.html  login.html
templates/fragments/: model_settings.html  quota_content.html  quota_skeleton.html  quota_swap_oob.html  settings.html  stats_cards.html  token_card.html  token_list.html
